--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Diplom</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
@@ -15,7 +15,7 @@
                 <div class="header-top">
                     <div class="header-logo">
                         <a href="#">
-                            <img src="img/logo/noemi-logo.svg" alt="logo">
+                            <img src="svg/logo/noemi-logo.svg" alt="logo">
                         </a>
                     </div>
                     <nav>
