--- a/index.html
+++ b/index.html
@@ -9,29 +9,27 @@
 </head>
 
 <body>
-    <header>
-        <div class="wrapper">
-            <div class="header">
-                <div class="header-top">
-                    <div class="header-logo">
-                        <a href="#">
-                            <img src="svg/logo/noemi-logo.svg" alt="logo">
-                        </a>
-                    </div>
-                    <nav>
-                        <ul class="header-nav">
-                            <li class="header-nav-item"><a class="header-nav-link" href="#">Главная</a></li>
-                            <li class="header-nav-item"><a class="header-nav-link" href="#">Посты</li></a>
-                            <li class="header-nav-item"><a class="header-nav-link" href="#">Статьи</li></a>
-                            <li class="header-nav-item"><a class="header-nav-link" href="#">Теги</li></a>
-                            <li class="header-nav-item"><a class="header-nav-link" href="#">Темы</li></a>
-                            <li class="header-nav-item"><a class="header-nav-link" href="#">Контакты</li></a>
-                        </ul>
-                    </nav>
+    <header class="head">
+        <div class="header">
+            <div class="header-top">
+                <div class="header-logo">
+                    <a href="#">
+                        <img src="svg/logo/noemi-logo.svg" alt="logo">
+                    </a>
                 </div>
-                <div class="header-title">
-                    <h1 class="header-title-text">Блог о творчестве, спорте, и образе жизни</h1>
-                </div>
+                <nav>
+                    <ul class="header-nav">
+                        <li class="header-nav-item"><a class="header-nav-link" href="#">Главная</a></li>
+                        <li class="header-nav-item"><a class="header-nav-link" href="#">Посты</a></li>
+                        <li class="header-nav-item"><a class="header-nav-link" href="#">Статьи</a></li>
+                        <li class="header-nav-item"><a class="header-nav-link" href="#">Теги</a></li>
+                        <li class="header-nav-item"><a class="header-nav-link" href="#">Темы</a></li>
+                        <li class="header-nav-item"><a class="header-nav-link" href="#">Контакты</a></li>
+                    </ul>
+                </nav>
+            </div>
+            <div class="header-title">
+                <h1 class="header-title-text">Блог о творчестве, спорте, и образе жизни</h1>
             </div>
         </div>
     </header>
@@ -361,11 +359,12 @@
                 <div class="main-sidebar-search">
                     <form class="main-sidebar-search-form" action="#">
                         <label class="main-sidebar-search-form-label">
-                            <input class="main-sidebar-search-input" placeholder="Найти..." type="text">
+                            <input class="main-sidebar-search-input" placeholder="Найти..." type="text" required>
                             <span class="main-sidebar-search-span">Введите значение</span>
-                            <span class="main-sidebar-search-span">Кнопка поиск</span>
-                            <button class="main-sidebar-search-link"></button>
                         </label>
+                        <button class="main-sidebar-search-link"><span class="main-sidebar-search-span">Кнопка
+                                поиск</span></button>
+
                     </form>
                 </div>
                 <div class="main-sidebar-content">
@@ -377,11 +376,9 @@
                             <input class="main-sidebar-form-input" placeholder="Ваш email-адрес" required type="email">
                             <span class="main-sidebar-form-input-span">Введите email</span>
                         </label>
-                        <label>
-                            <button class="main-sidebar-form-button">Подписаться
-                                <span class="main-sidebar-form-input-span">Введите email</span>
-                            </button>
-                        </label>
+                        <button class="main-sidebar-form-button">Подписаться
+                            <span class="main-sidebar-form-input-span">Введите email</span>
+                        </button>
                     </form>
                 </div>
                 <div class="main-sidebar-content">
@@ -433,74 +430,92 @@
 
             </aside>
         </div>
-        <div class="main__title">
-            <h2 class="main__title-text">Наши изделия</h2>
-        </div>
+
         <div class="main-products">
-            <div class="main-products__block product1">
-                <div class="main-products__conteiner">
-                    <img class="main-products__image" src="img/products/shop-item-desk1.jpg" alt="">
-                    <div class="main-products__title">
-                        <h2 class="main-products__title-text">Подушки на диван</h2>
+            <div class="main__title">
+                <h2 class="main__title-text">Наши изделия</h2>
+            </div>
+            <div class="main-products__wrapper">
+                <div class="main-products__block product1">
+                    <div class="main-products__conteiner">
+                        <img class="main-products__image" src="img/products/shop-item-desk1.jpg" alt="">
                     </div>
-                    <div class="main-products__discription">
-                        <p class="main-products__discription-text">Набор из двух подушек с модными принтами. Видео о
-                            создании <a class="main-products__discription-link" href="#">здесь.</a></p>
-                    </div>
-                    <div class="main-products__basket">
-                        <div class="main-products__price">
-                            <p class="main-products__price-discount">1000Р</p>
-                            <p class="main-products__price-sale">800Р</p>
+                    <div class="main-products__border">
+                        <div class="main-products__conteiner">
+                            <div class="main-products__title">
+                                <h2 class="main-products__title-text">Подушки на диван</h2>
+                            </div>
+                            <div class="main-products__discription">
+                                <p class="main-products__discription-text">Набор из двух подушек с модными принтами.
+                                    Видео о
+                                    создании <a class="main-products__discription-link" href="#">здесь.</a>
+                                </p>
+                            </div>
+                            <div class="main-products__basket">
+                                <div class="main-products__price">
+                                    <p class="main-products__price-discount">1000 &#8381</p>
+                                    <p class="main-products__price-sale">800 &#8381</p>
+                                </div>
+                                <a class="main-products__link" href="#">В магазин</a>
+                            </div>
                         </div>
-                        <a class="main-products__link" href="#">В магазин</a>
+                    </div>
+                </div>
+                <div class="main-products__block product2">
+                    <div class="main-products__conteiner">
+                        <img class="main-products__image" src="img/products/shop-item-desk2.jpg" alt="">
+                    </div>
+                    <div class="main-products__border">
+                        <div class="main-products__conteiner">
+                            <div class="main-products__title">
+                                <h2 class="main-products__title-text">Кукла «Зайчик»</h2>
+                            </div>
+                            <div class="main-products__discription">
+                                <p class="main-products__discription-text">Интерьерная рукодельная кукла «Зайчик»,
+                                    созданию
+                                    которой
+                                    посвящена <a class="main-products__discription-link" href="#">весенняя серия
+                                        постов</a>
+                                    в
+                                    блоге
+                                    и несколько подкастов.</p>
+                            </div>
+                            <div class="main-products__basket">
+                                <div class="main-products__price">
+                                    <p class="main-products__price-sale">3500 &#8381</p>
+                                </div>
+                                <a class="main-products__link" href="#">В магазин</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="main-products__block product3">
+                    <div class="main-products__conteiner">
+                        <img class="main-products__image" src="img/products/shop-item-desk3.jpg" alt="">
+                    </div>
+                    <div class="main-products__border">
+                        <div class="main-products__conteiner">
+                            <div class="main-products__title">
+                                <h2 class="main-products__title-text">Шестиугольная рамка</h2>
+                            </div>
+                            <div class="main-products__discription">
+                                <p class="main-products__discription-text">Необычная рамка для украшения дома из видео
+                                    <a class="main-products__discription-link" href="#">«Как
+                                        сделать
+                                        рамку из подручных средств за 30 минут»</a>
+                                </p>
+                            </div>
+                            <div class="main-products__basket">
+                                <div class="main-products__price">
+                                    <p class="main-products__price-discount">500 &#8381</p>
+                                    <p class="main-products__price-sale">400 &#8381</p>
+                                </div>
+                                <a class="main-products__link" href="#">В магазин</a>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
-            <div class="main-products__block product2">
-                <div class="main-products__conteiner">
-                    <img class="main-products__image" src="img/products/shop-item-desk2.jpg" alt="">
-                    <div class="main-products__title">
-                        <h2 class="main-products__title-text">Кукла «Зайчик»</h2>
-                    </div>
-                    <div class="main-products__discription">
-                        <p class="main-products__discription-text">Интерьерная рукодельная кукла «Зайчик», созданию
-                            которой
-                            посвящена <a class="main-products__discription-link" href="#">весенняя серия постов</a> в
-                            блоге
-                            и несколько подкастов.</p>
-                    </div>
-                    <div class="main-products__basket">
-                        <div class="main-products__price">
-                            <p class="main-products__price-sale">3500Р</p>
-                        </div>
-                        <a class="main-products__link" href="#">В магазин</a>
-                    </div>
-                </div>
-            </div>
-            <div class="main-products__block product3">
-                <div class="main-products__conteiner">
-                    <img class="main-products__image" src="img/products/shop-item-desk3.jpg" alt="">
-
-                    <div class="main-products__title">
-                        <h2 class="main-products__title-text">Шестиугольная рамка</h2>
-                    </div>
-                    <div class="main-products__discription">
-                        <p class="main-products__discription-text">Необычная рамка для украшения дома из видео <a
-                                class="main-products__discription-link" href="#">«Как
-                                сделать
-                                рамку из подручных средств за 30 минут»</a>
-                        </p>
-                    </div>
-                    <div class="main-products__basket">
-                        <div class="main-products__price">
-                            <p class="main-products__price-discount">500Р</p>
-                            <p class="main-products__price-sale">400Р</p>
-                        </div>
-                        <a class="main-products__link" href="#">В магазин</a>
-                    </div>
-                </div>
-            </div>
-
         </div>
     </div>
     <footer>
