--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Diplom</title>
     <link rel="stylesheet" href="css/style.css">
+    <script src="script.js" defer></script>
 </head>
 
 <body>
@@ -17,7 +18,10 @@
                         <img src="svg/logo/noemi-logo.svg" alt="logo">
                     </a>
                 </div>
-                <nav>
+                <div class="burger-menu">
+                    <span class="burger-menu__span"></span>
+                </div>
+                <nav class="nav">
                     <ul class="header-nav">
                         <li class="header-nav-item"><a class="header-nav-link" href="#">Главная</a></li>
                         <li class="header-nav-item"><a class="header-nav-link" href="#">Посты</a></li>
@@ -47,8 +51,9 @@
                         </ul>
                     </div>
                     <div class="main-trend__title">
-                        <h2 class="main-trend__title-text">Сейчас в тренде: сад
-                            на подоконнике</h2>
+                        <h2 class="main-trend__title-text"><a class="main-trend__title-link" href="#"> Сейчас в тренде:
+                                сад
+                                на подоконнике</a></h2>
                     </div>
                 </div>
             </div>
@@ -60,9 +65,9 @@
                         </ul>
                     </div>
                     <div class="main-trend__title">
-                        <h2 class="main-trend__title-text">сыры на красивых
-                            картинках из интернета:
-                            какие они на вкус?</h2>
+                        <h2 class="main-trend__title-text"><a class="main-trend__title-link" href="#">сыры на красивых
+                                картинках из интернета:
+                                какие они на вкус?</a></h2>
                     </div>
                 </div>
             </div>
@@ -75,8 +80,9 @@
                         </ul>
                     </div>
                     <div class="main-trend__title">
-                        <h2 class="main-trend__title-text">СОБИРАЕМСЯ В ПЕРВЫЙ
-                            ПОХОД В ГОРЫ</h2>
+                        <h2 class="main-trend__title-text"><a class="main-trend__title-link" href="#">СОБИРАЕМСЯ В
+                                ПЕРВЫЙ
+                                ПОХОД В ГОРЫ</a></h2>
                     </div>
                 </div>
             </div>
@@ -89,8 +95,9 @@
                         </ul>
                     </div>
                     <div class="main-trend__title">
-                        <h2 class="main-trend__title-text">Сейчас в тренде: сКОЛЬКО
-                            ВИТАМИНА c В ЛИМОНАХ?</h2>
+                        <h2 class="main-trend__title-text"><a class="main-trend__title-link" href="#">Сейчас в тренде:
+                                сКОЛЬКО
+                                ВИТАМИНА c В ЛИМОНАХ?</a></h2>
                     </div>
                 </div>
             </div>
