--- a/index.html
+++ b/index.html
@@ -379,7 +379,7 @@
                         <h2 class="main-sidebar-title-text">Рассылка</h2>
                     </div>
                     <form class="main-sidebar-form" action="#">
-                        <label>
+                        <label class="main-sidebar-form__label">
                             <input class="main-sidebar-form-input" placeholder="Ваш email-адрес" required type="email">
                             <span class="main-sidebar-form-input-span">Введите email</span>
                         </label>
